@@ -12,6 +12,9 @@ What's New in Python 2.6.5
 Core and Builtins
 -----------------
 
+- Issue #7413: Passing '\0' as the separator to datetime.datetime.isoformat()
+  used to drop the time part of the result.
+
 - Issue #6108: unicode(exception) and str(exception) should return the same
   message when only __str__ (and not __unicode__) is overridden in the subclass.
 
